added byte reflection method for IOPacket instances; publishing added to gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,7 @@ kotlinxVersion=1.8.0
 # JetBrains Annotations
 jbAnnotationsVersion=24.1.0
 jbAnnotationsName=org.jetbrains:annotations
+
+# Auxi
+auxiName=com.github.ks2288:auxi
+auxiVersion=1.0.0
